# qtcrt

./: README.md
_2_task_modules/: CMakeLists.txt  main.cpp
_3_task_/_3_task_designer/: CMakeLists.txt  mainwindow.h  mainwindow.ui
_3_task_/_3_task_new_designer/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.ui
_4_task_widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
_5_task_signals/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
